# Danmaku

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-rust-player.bat  build.gradle.kts  gradle.properties  run-macos.sh  run-windows.ps1  settings.gradle.kts
.github/: SECURITY.md
.github/workflows/: ci.yml
apps/android-mobile/: build.gradle.kts
apps/android-tv/: build.gradle.kts
apps/desktop-windows/: build.gradle.kts
apps/library-server-windows/: build.gradle.kts
apps/web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md  ani-rss-integration-review.md  architecture.md  bug-list.md  current-state.md  lan-protocol.md  reference-nipaplay-feature-review.md  releasing.md  roadmap.md  tasks.md  windows-libmpv-bundle.md
docs/adr/: 0001-kotlin-compose-and-focused-rust.md  0002-windows-libmpv-distribution.md
docs/design/: android-mobile-tv-library-ui-review.md  android-mobile-tv-library-ui-tasks.md  desktop-localization-resource-plan.md  desktop-main-refactor-plan.md  external-anime-tracking-tasks.md  home-and-app-shell-ui-design.md  home-and-app-shell-ui-tasks.md  rust-migration-plan.md  rust-player-ui-redesign-plan.md  server-client-web-ui-split-plan.md  windows-library-ui-redesign.md
docs/qa/: live-external-sync-qa.md  remote-headless-packaging-qa.md  windows-background-host-qa.md  windows-playback-release-qa.md
native/library-server/: Cargo.toml
native/library-server/src/: attention.rs  catalog.rs  catalog_metadata.rs  cli.rs  dandanplay.rs  desktop_import.rs  discovery.rs  domain.rs  external_provider.rs  hash.rs  http.rs  lib.rs  lock.rs  logging.rs  main.rs  poster_cache.rs  progress.rs  provider_secrets.rs  runtime.rs  scanner.rs  settings.rs  tracking.rs
native/player-app/: Cargo.toml  build.rs
native/player-app/assets/: README.md
native/player-app/src/: app.rs  branding.rs  cache.rs  cli.rs  danmaku.rs  danmaku_http.rs  discovery.rs  hosting.rs  icons.rs  lib.rs  library.rs  localization.rs  main.rs  net.rs  platform.rs  posters.rs  preferences.rs  screens.rs  session.rs  smoke.rs  theme.rs  tracks.rs  video.rs
native/player-windows-mpv/: Cargo.toml
native/rust-core/: Cargo.toml
native/spike-egui-player/: Cargo.toml  README.md
native/spike-egui-player/assets/: README.md
native/spike-egui-player/src/: cli.rs  clock.rs  danmaku.rs  lib.rs  main.rs  mpv.rs  smoke.rs
shared/domain/: build.gradle.kts
shared/library-client/: build.gradle.kts
shared/library-client-android/: build.gradle.kts
shared/library-host-core/: build.gradle.kts
shared/library-server-core/: build.gradle.kts
shared/player-android-media3/: build.gradle.kts
tools/dandanplay-worker-proxy/: README.md  package-lock.json  package.json  tsconfig.test.json  wrangler.toml
tools/windows/: capture-desktop-localization-screenshots.ps1  install-libmpv-dependency.ps1  manage-rust-library-background-host.ps1  prepare-rust-player-release.ps1  prepare-rust-server-release.ps1  prepare-windows-release.ps1  run-android-mobile-emulator-qa.ps1  run-android-tv-emulator-qa.ps1  run-danmaku.ps1  run-embedded-web-ui-qa.ps1  run-headless-web-ui-qa.ps1  run-library-quality-live-qa.ps1  run-live-external-sync-readback-qa.ps1  run-rust-library-background-host.ps1  run-rust-player-ui-qa.ps1  run-rust-player.ps1  run-windows-playback-release-qa.ps1  smoke-windows-playback.ps1  test-install-libmpv-dependency.ps1  test-verify-libmpv-bundle.ps1  verify-libmpv-bundle.ps1  verify-release-licensing.ps1  (+2 more)
(+341 files in other folders)
