[package]
name = "library-server"
version = "0.1.0"
edition = "2024"
description = "Rust foundations for the Danmaku headless library server"
license = "MIT"

[dependencies]
clap = "=4.6.1"
getrandom = "=0.3.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
