[package]
name = "library-server"
version = "0.1.0"
edition = "2024"
description = "Rust foundations for the Danmaku headless library server"
license = "MIT"

[dependencies]
axum = { version = "=0.8.6", default-features = false, features = ["http1", "tokio"] }
clap = "=4.6.1"
getrandom = "=0.3.4"
rusqlite = { version = "=0.37.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "=0.7.18", features = ["io"] }
tower = { version = "=0.5.3", features = ["util"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinHttp",
    "Win32_Networking_WinSock",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
