[package]
name = "danmaku-player"
version = "0.1.0"
edition = "2024"
publish = false
description = "Danmaku native Windows player client (Rust migration phase 3)"
license = "MIT"

[[bin]]
name = "danmaku-player"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow"] }
egui_glow = "0.32.3"
player-windows-mpv = { path = "../player-windows-mpv" }
