[package]
name = "danmaku-player"
version = "0.1.0"
edition = "2024"
publish = false
description = "Danmaku native Windows player client (Rust migration phase 3)"
license = "MIT"

[[bin]]
name = "danmaku-player"
path = "src/main.rs"

[dependencies]
danmaku-core = { path = "../rust-core" }
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow"] }
egui_glow = "0.32.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
player-windows-mpv = { path = "../player-windows-mpv" }
raw-window-handle = "0.6"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.150"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
